--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 body{
     font-family: 'Roboto', sans-serif;
+    margin: 0;
 }
 .first-sec p{
     padding-bottom: 50px;
@@ -93,14 +94,25 @@ body{
     background-color: rgb(209, 180, 185);
 }
 
-.third-sec {
 
-}
 .flex-cont2{
     
     display: flex;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+.third-sec h1{
+    margin-top: 90px;
+    text-align: center;
+    font-size: 30px;
+}
+#para{
+    text-align: center;
+    margin:0px 180px 70px 180px
+    
 }
 .flex-cont2 div{
+    
     
     color: rgb(45, 36, 27);
     border-radius: 5px;
@@ -109,4 +121,91 @@ body{
     padding:50px 20px;
     margin:10px
     
+}
+#div1{
+    background-color: rgb(230, 246, 251);
+}
+#div2{
+    background-color: rgb(254, 225, 230);
+}
+#div3{
+    background-color: rgb(250, 250, 222);
+}
+.fourth-sec{
+    display: flex;
+    
+    
+}
+.half-width{
+    width: 50%;
+}
+.half-width img{
+    margin-left: 150px;
+    width: 100%;
+    height:25em;
+    width:25em;
+    
+}
+#sec4{
+    margin-left: 50px;
+    margin-top: 100px;
+}
+
+.fourth-sec a{
+    
+    color:azure;
+    text-decoration: none;
+    background-color: tomato;
+    padding: 10px 20px;
+    border: 5px solid tomato;
+    border-radius: 5px;
+}
+.sub{
+    
+    text-align: center;
+    border: 1px solid rgb(244, 224, 159);
+    display: flex;
+    background-color: rgb(244, 224, 159);
+    border-radius: 5px;
+    padding-top: 70px;
+    padding-bottom: 70px;    
+    padding-left: 150px;
+    margin-left: 300px;
+    margin-right:300px
+
+    
+}
+#fifth{
+    margin-top: 100px;
+    text-align: center;
+}
+.sub input{
+    border:0;
+    padding: 10px 80px 10px 5px;
+    background-color: rgb(202, 200, 200);
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    
+}
+.sub button{
+    border:0;
+    color: white;
+    padding: 10px 40px 10px 35px;
+    background-color: rgb(225, 78, 52);
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    cursor: pointer;
+    
+    
+}
+.foot{
+    margin-top: 100px;
+    color: white;
+    text-align: center;
+    background-color: black;
+    padding-top:50px;
+    padding-bottom: 50px;
+}
+.foot h1{
+    font-family: 'Splash', cursive;
 }
